# mipt-archi

./: Architect.postman_collection.json  Dockerfile  Dockerfile_webserver  Dockerfile_worker  docker-compose.yml  env_file  init_db.sh  mock_data.csv  proxysql.cnf  readme.md
web_server/: CMakeLists.txt  http_request_factory.h  http_web_server.h  main.cpp  worker.cpp
web_server/config/: config.cpp  config.h
web_server/db_connector/: cache.cpp  cache.h  db_connector.cpp  db_connector.h
web_server/handlers/: default_handler.h  person_handler.h
web_server/models/: person.cpp  person.h
